# patron

./: .gitignore  Episode  README.md  docker-compose.yml  generate-openapi.sh  new-posts.md  package.json  patron.code-workspace
.github/: rules.yaml
.github/workflows/: commitlint.yml  docker-build.yml  react-server-lint.yml  rust-test-suite.yml  sdk_generation.yaml  sdk_publish.yaml
astrobits/: .stylelintrc.json  README.md  astro.config.mjs  eslint.config.js  index.ts  package-lock.json  package.json  postcss.config.cjs
astrobits/src/: content.config.ts
astrobits/src/components/Button/: Button.astro  Button.css
astrobits/src/components/Card/: Card.astro  Card.css
astrobits/src/components/Toggle/: Toggle.astro  Toggle.css
astrobits/src/components/Tooltip/: Tooltip.astro  Tooltip.css
astrobits/src/data/components/: Button.mdx  Card.mdx  Tooltip.mdx
astrobits/src/layouts/: PageLayout.astro
astrobits/src/pages/: index.astro
astrobits/src/styles/: global.css
backend/: .env.dist  Cargo.toml  Dockerfile  clippy.toml  openapi.json
backend/migrations/2025-07-01-172549_update_users_table_for_modern_auth/: down.sql
backend/migrations/2025-07-01-180933_drop_ephemeral_auth_tables/: up.sql
backend/migrations/2025-09-02-024255_add_email_verification_tokens/: down.sql  up.sql
backend/migrations/2025-09-19-084018_add_user_files_table/: down.sql  up.sql
backend/migrations/2025-09-22-082053_create_series_table/: up.sql
backend/migrations/2025-09-22-082540_create_posts_table/: up.sql
backend/migrations/2025-09-24-053927_create_api_keys_table/: up.sql
backend/migrations/2025-10-02-144920_remove_series_monetization_columns/: down.sql  up.sql
backend/migrations/2025-10-08-144839_create_series_length_table/: down.sql  up.sql
backend/migrations/2025-10-14-150742_add_banner_to_users/: down.sql  up.sql
backend/server/: Cargo.toml  test_oauth.py
backend/server/src/: lib.rs  main.rs  openapi.rs
backend/server/src/handlers/: api_keys.rs  auth.rs  mod.rs  outrank.rs  posts.rs  series.rs  user_files.rs
backend/shared/: Cargo.toml
backend/shared/src/: errors.rs  lib.rs  schema.rs
backend/shared/src/models/: api_keys.rs  auth.rs  mod.rs  posts.rs  series.rs  series_length.rs  user_files.rs
backend/shared/src/services/: auth.rs  config.rs  email.rs  mod.rs  s3.rs
backend/shared/src/services/db/: mod.rs
backend/urlencoding/: Cargo.toml
backend/urlencoding/src/: dec.rs  enc.rs  lib.rs
client/: .prettierignore  eslint.config.js  package.json  tsconfig.json  vite-env.d.ts
client/app/: app.css  root.tsx  routes.ts
client/app/components/: form-card.tsx
client/app/components/ui/: button.tsx  checkbox.tsx  (+2 more)
client/app/layouts/: login.tsx
client/app/lib/: utils.ts
client/app/routes/: login.tsx  register.tsx  sw.tsx
client/public/: sw.js
clients/react-server/: .env.dist  .prettierrc.json  Dockerfile  eslint.config.js  index.html  package.json  server.js
clients/react-server/src/: App.tsx  Card.tsx  entry-client.tsx  entry-server.tsx  index.css
clients/ts-sdk/: FUNCTIONS.md  README.md  RELEASES.md  USAGE.md  jsr.json  openapi.json  package-lock.json  package.json
clients/ts-sdk-tests/: .env.dist  .gitignore  .prettierignore  README.md  eslint.config.mjs  final-fix.js  fix-duplicates.js  jest.config.js  package-lock.json  package.json  tsconfig.json
clients/ts-sdk-tests/src/: setupTests.ts
clients/ts-sdk/.devcontainer/: README.md  setup.sh
clients/ts-sdk/.speakeasy/: gen.yaml  out.openapi.yaml  speakeasy-modifications-overlay.yaml  workflow.yaml
clients/ts-sdk/examples/: .env.template  README.md  apiKeysList.example.ts  authCheckEmail.example.ts  authForgotPassword.example.ts  package-lock.json  package.json  run-series-length-test.sh  seriesLength.test.ts  setup-test-credentials.ts
clients/ts-sdk/src/: client.ts  core.ts  schema.d.ts  types.ts
daily-updates/: day-1.md
server/: .env.dist  Cargo.toml  Dockerfile  diesel.toml
server/migrations/2025-06-27-093507_create_id_to_clip_table/: down.sql  up.sql
server/migrations/2025-06-27-180615_add_generations_table/: down.sql  up.sql
server/migrations/2025-06-27-190655_add_users_table/: down.sql  up.sql
server/migrations/2025-06-27-191905_rename/: down.sql  up.sql
server/migrations/2025-06-27-193226_create_audio_clips_table/: down.sql  up.sql
server/migrations/2025-06-27-230941_rename_generation_fields/: down.sql  up.sql
server/migrations/2025-06-28-054641_add_user_relations_to_audios_generations/: up.sql
server/migrations/2025-07-01-172549_update_users_table_for_modern_auth/: up.sql
server/migrations/2025-07-01-180933_drop_ephemeral_auth_tables/: down.sql
server/server/: Cargo.toml  test_oauth.py
server/server/src/: lib.rs  main.rs  openapi.rs
server/server/src/handlers/: auth.rs  characters.rs  generation.rs  mod.rs  webhook.rs
server/shared/: Cargo.toml
server/shared/src/: errors.rs  lib.rs  schema.rs
server/shared/src/models/: audio_clip.rs  auth.rs  character.rs  clips.rs  generation.rs  mod.rs
server/shared/src/services/: auth.rs  config.rs  elevenlabs.rs  email.rs  latentsync.rs  mod.rs  s3.rs
server/shared/src/services/db/: audio_clip.rs  character.rs  generation.rs  mod.rs  video_clip.rs
server/urlencoding/: Cargo.toml
server/urlencoding/src/: dec.rs  enc.rs  lib.rs
website/: .env.dist  .prettierrc  README.md  astro.config.mjs  convert-to-markdown.sh  keystatic.config.ts  package.json  tsconfig.json  upload-to-remote.sh  worker.js  wrangler.jsonc
website/emails/: welcome-to-newsletter.html
website/public/: llms.txt  site.webmanifest
website/scripts/: download-and-localize-images.sh
website/src/: content.config.ts  env.d.ts
website/src/components/: Accordion.astro  BlogBox.astro  Box.astro  Button.astro  EndCta.astro  EndCtaGrid.astro  Footer.astro  Input.astro  KeystaticImage.astro  Link.astro  Marquee.astro  Nav.astro  Posts.astro  Steps.astro  Testimonial.astro  Testimonials.astro
website/src/layouts/: Layout.astro
website/src/pages/: 404.astro  changelog.astro  index.astro  rss.xml.js
website/src/styles/: global.css
(+415 files in other folders)
