[workspace]
resolver = "3"
members = ["server", "urlencoding", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shared = { path = "shared" }
uuid = { version = "1.13", features = ["v4", "serde"] }
diesel = { version = "2.2", features = [
    "postgres",
    "chrono",
    "serde_json",
    "uuid",
] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
bb8 = "0.9.0"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
actix-web = "4"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
thiserror = "2.0.12"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
tracing = "0.1"
bytes = "1"
urlencoding = { version = "2.1.3" }
utoipa = { version = "5.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "5.0", features = ["actix-web"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
argon2 = "0.5"
zxcvbn = "3.1"
hex = "0.4"
