[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "server"
description = "Backend server and shared utilities for the patron application"
license = "MIT"
repository = "https://github.com/patroninc/patron"
readme = "../README.md"
keywords = ["api", "backend", "web-server"]
categories = ["web-programming", "api-bindings"]

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "redoc_ci"
path = "src/bin/redoc_ci.rs"


[dependencies]
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-actix-web = "0.7.19"
tracing = { workspace = true }
diesel_migrations = "2.2.0"
shared = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
diesel-async.workspace = true
dotenvy = "0.15.7"
reqwest = { workspace = true }
diesel.workspace = true
utoipa = { workspace = true }
utoipa-redoc = { workspace = true }
base64 = "0.22.1"
aes-gcm = "0.10.3"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
actix-cors = "0.7.1"
actix-session = { workspace = true }
redis = { workspace = true }
argon2 = { workspace = true }
md5 = { workspace = true }
actix-form-data = "0.6.2"
actix-multipart = "0.4.0"
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["fs"] }

[lints]
workspace = true
