[package]
name = "shared"
version.workspace = true
edition.workspace = true
description = "Shared utilities and types for the patron application"
license = "MIT"
repository = "https://github.com/patroninc/patron"
readme = "../README.md"
keywords = ["utilities", "shared", "types"]
categories = ["data-structures", "development-tools"]

[dependencies]
diesel-async = { workspace = true }
bb8 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "2.0.1", features = ["display"] }
actix-web = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
urlencoding = { workspace = true }
diesel = { workspace = true }
diesel_migrations = "2.1"
utoipa.workspace = true
lettre = { version = "0.11", features = ["builder", "smtp-transport"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
actix-session = { workspace = true }
futures-util = "0.3.31"
tokio-util = "0.7.16"
sha2 = "0.10.9"

[lints]
workspace = true
